--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 PLATFORM=amd64 # amd64 for Linux | arm64 | for M2, M1
 CONFIG=ubuntu
-DOCKER_STACK_SSL=true
+DOCKER_STACK_SSL=false
 TIMEZONE=Europe/Madrid
 PROJECT_NAME=xm
 PROJECT_PATH=/projects/xm
