--- a/root/.env
+++ b/root/.env
@@ -20,6 +20,7 @@ SYMBOLS_USA=IBM
 
 ALPHA_VANTAGE_API_MODE=LOCALTEST #LOCALTEST or something else
 ALPHA_VANTAGE_API_MARKET=USA 
+ALPHA_VANTAGE_API_INTERVAL=5min #1min,5min 
 ALPHA_VANTAGE_API_KEY=SC1P82M9R2IDSILX
 ALPHA_VANTAGE_API_URL=https://www.alphavantage.co/query?function=%s&symbol=%s&interval=%s&outputsize=%s&apikey=%s
 ALPHA_VANTAGE_API_TEST_URL=http://xm.localhost/api/test/symbols
