--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,7 +56,25 @@ services:
     networks:
       - proxy
       - host_network
-    
+  
+  redis-commander:
+    container_name: ${PROJECT_NAME}-${CONFIG}-redis-commander
+    hostname: ${PROJECT_NAME}-${CONFIG}-redis-commander
+    image: 'ghcr.io/joeferner/redis-commander:latest'
+    labels:
+      - traefik.enable=true
+      - traefik.docker.network=proxy
+      - traefik.http.routers.redis-commander.rule=Host(`redis-commander.localhost`)
+      - traefik.http.routers.redis-commander.tls=${DOCKER_STACK_SSL}
+    ports:
+      - 8081:8081
+    restart: always
+    environment:
+      - REDIS_HOSTS=${PROJECT_NAME}-${CONFIG}-redis
+    networks:
+      - proxy
+      - host_network
+  
 
 networks:
   host_network:
