--- a/root/.env
+++ b/root/.env
@@ -8,12 +8,18 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#mysql
 DB_CONNECTION=mysql
 DB_HOST=xm-ubuntu-mysql
 DB_PORT=3306
 DB_DATABASE=xm
 DB_USERNAME=xm
 DB_PASSWORD=xm
+
+#redis
+REDIS_HOST=xm-ubuntu-redis
+REDIS_PORT=6379
+
 
 #SYMBOLS_USA=IBM,ORCL,AXP,SEDG,ENPH,MARA,SLB,ARM,LIPO,RIG,HBAN,RUN
 SYMBOLS_USA=IBM
@@ -27,6 +33,7 @@ ALPHA_VANTAGE_API_TEST_URL=http://xm.localhost/api/test/symbols
 ALPHA_VANTAGE_API_TEST_DATA=tests/Data/sample.json #emulate server response locally
 ALPHA_VANTAGE_API_TRY_TO_RECONNECT=3 #3x try to reconnect
 ALPHA_VANTAGE_API_RECONNECT_INTERVAL=20 #try to reconnect in ever 20 seconds
+ALPHA_VANTAGE_API_REDIS_KEY=AVAPI_
 
 
 BROADCAST_DRIVER=log
