--- a/root/.env
+++ b/root/.env
@@ -20,9 +20,7 @@ DB_PASSWORD=xm
 REDIS_HOST=xm-ubuntu-redis
 REDIS_PORT=6379
 
-
-#SYMBOLS_USA=IBM,ORCL,AXP,SEDG,ENPH,MARA,SLB,ARM,LIPO,RIG,HBAN,RUN
-SYMBOLS_USA=IBM
+SYMBOLS_USA=IBM,ORCL,AXP,SEDG,ENPH,MARA,SLB,ARM,LIPO,RIG,HBAN,RUN
 
 ALPHA_VANTAGE_API_MODE=LOCALTEST #LOCALTEST or something else
 ALPHA_VANTAGE_API_MARKET=USA #Market name
@@ -34,6 +32,8 @@ ALPHA_VANTAGE_API_TEST_DATA=tests/Data/sample.json #emulate server response loca
 ALPHA_VANTAGE_API_TRY_TO_RECONNECT=3 #3x try to reconnect
 ALPHA_VANTAGE_API_RECONNECT_INTERVAL=20 #try to reconnect in ever 20 seconds
 ALPHA_VANTAGE_API_REDIS_KEY=AVAPI_
+ALPHA_VANTAGE_API_REDIS_CACHE_EXPIRE=60 #key expired after 60 sec
+
 
 
 BROADCAST_DRIVER=log
