--- a/root/.env
+++ b/root/.env
@@ -20,7 +20,7 @@ DB_PASSWORD=xm
 REDIS_HOST=xm-ubuntu-redis
 REDIS_PORT=6379
 
-SYMBOLS_USA=IBM,ORCL,AXP,SEDG,ENPH,MARA,SLB,ARM,LIPO,RIG,HBAN,RUN
+SYMBOLS_USA=IBM,ORCL,AXP,SEDG,ENPH,MARA,SLB,ARM,LIPO,RIG
 
 ALPHA_VANTAGE_API_MODE=LOCALTEST #LOCALTEST or something else
 ALPHA_VANTAGE_API_MARKET=USA #Market name
@@ -33,6 +33,7 @@ ALPHA_VANTAGE_API_TRY_TO_RECONNECT=3 #3x try to reconnect
 ALPHA_VANTAGE_API_RECONNECT_INTERVAL=20 #try to reconnect in ever 20 seconds
 ALPHA_VANTAGE_API_REDIS_KEY=AVAPI_
 ALPHA_VANTAGE_API_REDIS_CACHE_EXPIRE=60 #key expired after 60 sec
+ALPHA_VANTAGE_API_WAITING=12 #sec waiting beetwen each calls to not reach the free version rate limit 5 calls per minute
 
 
 
