--- a/root/.env
+++ b/root/.env
@@ -27,8 +27,8 @@ ALPHA_VANTAGE_API_MARKET=USA #Market name
 ALPHA_VANTAGE_API_INTERVAL=5min #1min,5min 
 ALPHA_VANTAGE_API_KEY=SC1P82M9R2IDSILX
 ALPHA_VANTAGE_API_URL=https://www.alphavantage.co/query?function=%s&symbol=%s&interval=%s&outputsize=%s&apikey=%s
-ALPHA_VANTAGE_API_TEST_URL=http://xm.localhost/api/test/symbols
-ALPHA_VANTAGE_API_TEST_DATA=tests/Data/sample.json #emulate server response locally
+ALPHA_VANTAGE_API_TEST_URL=http://xm.localhost/api/test/symbols?function=%s&symbol=%s
+ALPHA_VANTAGE_API_TEST_DATA=tests/Data #emulate server response locally
 ALPHA_VANTAGE_API_TRY_TO_RECONNECT=3 #3x try to reconnect
 ALPHA_VANTAGE_API_RECONNECT_INTERVAL=20 #try to reconnect in ever 20 seconds
 ALPHA_VANTAGE_API_REDIS_KEY=AVAPI_
