rate limit applied

--- a/root/.env
+++ b/root/.env
@@ -4,6 +4,7 @@ APP_KEY=base64:qnkJH4weIa0HxR2FUY2XykGe/itLGgl4CqxfSKz/gK0=
 APP_DEBUG=true
 APP_URL=http://xm.localhost
 
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -35,6 +36,7 @@ ALPHA_VANTAGE_API_REDIS_KEY=AVAPI_
 ALPHA_VANTAGE_API_REDIS_CACHE_EXPIRE=60 #key expired after 60 sec
 ALPHA_VANTAGE_API_WAITING=12 #sec waiting beetwen each calls to not reach the free version rate limit 5 calls per minute
 
+REPORTS_RATE_LIMIT=5 # 5 calls per minute
 
 
 BROADCAST_DRIVER=log
